Extract the config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ anyhow = "1.0.86"
 clap = "4.5.11"
 colored = "2.1.0"
 markdown = "1.0.0-alpha.18"
+toml = "0.5.2"
+serde = "1.0.136"
+serde_derive = "1.0.136"
+homedir = "0.3.3"
